[package]
name = "minidex"
version = "0.1.0"
edition = "2021"
authors = ["lythesis <iranaikimi@gmail.com>"]
description = "A simplified on-chain order book DEX implementation in Rust using ink!"

[dependencies]
ink = { version = "5.1.1", default-features = false }
scale-info = { version = "2.11", default-features = false }
# Note: We **need** to specify the `ink-as-dependency` feature.
# If we don't we will end up with linking errors!
erc20 = { path = "erc20", default-features = false, features = [
    "ink-as-dependency",
] }

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["ink/std", "scale-info/std", "erc20/std"]
ink-as-dependency = []
